k8s/datadog-production.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: os-management
  namespace: os-management
spec:
  template:
    metadata:
      labels:
        tags.datadoghq.com/env: production
    spec:
      containers:
        - name: os-management
